--- a/listr/index.html
+++ b/listr/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Listr · Interactive Ranking</title>
 
     <!-- React + ReactDOM -->
@@ -201,9 +201,8 @@
 const { BrowserRouter, Switch, Route, useHistory, useParams } = window.ReactRouterDOM;
 const { useState, useEffect } = React;
 
-
 /* -----------------------------------
-   HOME SCREEN (/listr)
+   HOME
 ----------------------------------- */
 function HomeScreen() {
     const history = useHistory();
@@ -233,9 +232,8 @@ function HomeScreen() {
     );
 }
 
-
 /* -----------------------------------
-   CREATE LIST SCREEN (/create)
+   CREATE
 ----------------------------------- */
 function CreateListScreen({ setListItems }) {
     const history = useHistory();
@@ -244,7 +242,7 @@ function CreateListScreen({ setListItems }) {
     const handleStartRanking = async () => {
         const lines = rawText
             .split("\n")
-            .map(line => line.trim())
+            .map(l => l.trim())
             .filter(Boolean);
 
         if (!lines.length) {
@@ -257,29 +255,23 @@ function CreateListScreen({ setListItems }) {
         let id = null;
         try {
             const res = await fetch("/api/list", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
+                method:"POST",
+                headers:{ "Content-Type":"application/json" },
+                body:JSON.stringify({
                     items: lines,
                     timestamp: Date.now(),
                     userAgent: navigator.userAgent
                 })
             });
-
             const data = await res.json();
             id = data?.id;
-        } catch (err) {
-            console.error("Logging error:", err);
+        } catch (e) {
+            console.error("KV save error:", e);
         }
 
-        if (id) {
-            history.push(`/list/${id}/rank`);
-        } else {
-            history.push("/rank");
-        }
+        if (id) history.push(`/list/${id}/rank`);
+        else history.push("/rank");
     };
-
-    const handleClear = () => setRawText("");
 
     return (
         <div className="app-shell">
@@ -293,7 +285,7 @@ function CreateListScreen({ setListItems }) {
                     <div className="create-heading">What are we ranking?</div>
                     <div className="create-subtitle">
                         Add one item per line — bands, movies, baby names, restaurants,
-                        whatever your brain is currently spiralling about.
+                        whatever your brain is spiralling about.
                     </div>
 
                     <div className="field-label">Items (one per line)</div>
@@ -316,7 +308,7 @@ Rilo Kiley
                             START RANKING <span>▶</span>
                         </button>
 
-                        <div className="secondary-link" onClick={handleClear}>
+                        <div className="secondary-link" onClick={() => setRawText("")}>
                             clear all
                         </div>
                     </div>
@@ -326,19 +318,17 @@ Rilo Kiley
     );
 }
 
-
 /* -----------------------------------
-   RANKING SCREEN (dynamic)
-   /list/:listId/rank
+   RANKING SCREEN
 ----------------------------------- */
 function RankingScreen() {
     const { listId } = useParams();
     const history = useHistory();
+
     const [items, setItems] = useState([]);
     const [rankedItems, setRankedItems] = useState([]);
     const [loading, setLoading] = useState(true);
 
-    /* Load data from KV */
     useEffect(() => {
         async function load() {
             try {
@@ -346,15 +336,15 @@ function RankingScreen() {
                 const data = await res.json();
                 setItems(data.items || []);
             } catch (err) {
-                console.error("Failed to load list:", err);
+                console.error("Failed loading:", err);
             }
             setLoading(false);
         }
         load();
     }, [listId]);
 
+    const [isDroppingOnRanked, setIsDroppingOnRanked] = useState(false);
 
-    /* Drag logic — unchanged */
     const handleDragStartAvailable = (e, item) => {
         e.dataTransfer.setData("drag-type", "available");
         e.dataTransfer.setData("item", item);
@@ -367,53 +357,50 @@ function RankingScreen() {
 
     const handleDragOver = (e) => e.preventDefault();
 
-    const [isDroppingOnRanked, setIsDroppingOnRanked] = useState(false);
-
     const handleDropOnRankedContainer = (e) => {
         e.preventDefault();
         setIsDroppingOnRanked(false);
-        const dragType = e.dataTransfer.getData("drag-type");
 
-        if (dragType === "available") {
+        const type = e.dataTransfer.getData("drag-type");
+        if (type === "available") {
             const item = e.dataTransfer.getData("item");
-            if (item && !rankedItems.includes(item)) {
+            if (!rankedItems.includes(item)) {
                 setRankedItems([...rankedItems, item]);
                 setItems(items.filter(i => i !== item));
             }
-        } else if (dragType === "ranked") {
-            const sourceIndex = parseInt(e.dataTransfer.getData("sourceIndex"), 10);
-            if (!isNaN(sourceIndex)) {
-                const updated = [...rankedItems];
-                const [moved] = updated.splice(sourceIndex, 1);
-                updated.push(moved);
-                setRankedItems(updated);
-            }
+        } else {
+            const idx = parseInt(e.dataTransfer.getData("sourceIndex"));
+            const updated = [...rankedItems];
+            const [moved] = updated.splice(idx,1);
+            updated.push(moved);
+            setRankedItems(updated);
         }
     };
 
-    const handleDropOnRankedItem = (e, targetIndex) => {
+    const handleDropOnRankedItem = (e, target) => {
         e.preventDefault();
         e.stopPropagation();
         setIsDroppingOnRanked(false);
 
-        const dragType = e.dataTransfer.getData("drag-type");
+        const type = e.dataTransfer.getData("drag-type");
 
-        if (dragType === "available") {
+        if (type === "available") {
             const item = e.dataTransfer.getData("item");
-            if (item && !rankedItems.includes(item)) {
+            if (!rankedItems.includes(item)) {
                 const updated = [...rankedItems];
-                updated.splice(targetIndex, 0, item);
+                updated.splice(target, 0, item);
                 setRankedItems(updated);
                 setItems(items.filter(i => i !== item));
             }
         } else {
-            const sourceIndex = parseInt(e.dataTransfer.getData("sourceIndex"), 10);
-            if (sourceIndex === targetIndex) return;
-            const updated = [...rankedItems];
-            const [moved] = updated.splice(sourceIndex, 1);
-            const adjusted = sourceIndex < targetIndex ? targetIndex - 1 : targetIndex;
-            updated.splice(adjusted, 0, moved);
-            setRankedItems(updated);
+            const source = parseInt(e.dataTransfer.getData("sourceIndex"));
+            if (source !== target) {
+                const updated = [...rankedItems];
+                const [moved] = updated.splice(source, 1);
+                const adjusted = source < target ? target - 1 : target;
+                updated.splice(adjusted, 0, moved);
+                setRankedItems(updated);
+            }
         }
     };
 
@@ -421,19 +408,7 @@ function RankingScreen() {
         return (
             <div className="app-shell">
                 <div className="app-shell-inner">
-                    <div className="home-heading">Loading list…</div>
-                </div>
-            </div>
-        );
-    }
-
-    if (!items.length && !rankedItems.length) {
-        return (
-            <div className="app-shell">
-                <div className="app-shell-inner">
-                    <div className="home-heading">
-                        That list doesn’t exist or is empty.
-                    </div>
+                    <div className="home-heading">Loading…</div>
                 </div>
             </div>
         );
@@ -449,7 +424,6 @@ function RankingScreen() {
 
                 <div className="container">
 
-                    {/* Available */}
                     <div className="panel">
                         <div className="panel-header">
                             <div>
@@ -462,34 +436,29 @@ function RankingScreen() {
                         </div>
 
                         <div className="list-body">
-                            <div className="hint">drag items into the right-hand stack</div>
-
+                            <div className="hint">drag items to right-hand stack</div>
                             {items.map(item => (
                                 <div
                                     key={item}
                                     className="item"
                                     draggable
-                                    onDragStart={(e) => handleDragStartAvailable(e, item)}
+                                    onDragStart={e => handleDragStartAvailable(e,item)}
                                 >
                                     <span>{item}</span>
                                     <span className="ranked-badge"></span>
                                 </div>
                             ))}
-
-                            {items.length === 0 && (
-                                <div className="ranked-empty-state">
-                                    all items drafted → reorder on right
-                                </div>
+                            {!items.length && (
+                                <div className="ranked-empty-state">all items drafted</div>
                             )}
                         </div>
                     </div>
 
-                    {/* Ranked */}
                     <div className="panel">
                         <div className="panel-header">
                             <div>
                                 <div className="panel-title">Ranking Stack</div>
-                                <div className="panel-subtitle">Reorder items</div>
+                                <div className="panel-subtitle">Reorder</div>
                             </div>
                         </div>
 
@@ -500,23 +469,23 @@ function RankingScreen() {
                             onDragEnter={() => setIsDroppingOnRanked(true)}
                             onDragLeave={() => setIsDroppingOnRanked(false)}
                         >
-                            {rankedItems.length === 0 && (
+                            {!rankedItems.length && (
                                 <div className="ranked-empty-state">
-                                    drop items here to begin ranking
+                                    drop items here to begin
                                 </div>
                             )}
 
-                            {rankedItems.map((item, index) => (
+                            {rankedItems.map((item,index) => (
                                 <div
                                     key={item}
                                     className="ranked-item"
                                     draggable
-                                    onDragStart={(e) => handleDragStartRanked(e, index)}
+                                    onDragStart={e => handleDragStartRanked(e,index)}
                                     onDragOver={handleDragOver}
-                                    onDrop={(e) => handleDropOnRankedItem(e, index)}
+                                    onDrop={e => handleDropOnRankedItem(e,index)}
                                 >
                                     <span>
-                                        <span className="rank-number">#{index + 1}</span>
+                                        <span className="rank-number">#{index+1}</span>
                                         {item}
                                     </span>
                                     <span className="ranked-badge"></span>
@@ -531,12 +500,11 @@ function RankingScreen() {
     );
 }
 
-
 /* -----------------------------------
    ROUTER WRAPPER
 ----------------------------------- */
 function App() {
-    const [listItems, setListItems] = React.useState([]);
+    const [listItems, setListItems] = useState([]);
 
     return (
         <BrowserRouter basename="/listr">
@@ -546,21 +514,17 @@ function App() {
 
                 <Route
                     path="/create"
-                    render={() => (
-                        <CreateListScreen setListItems={setListItems} />
-                    )}
+                    render={() => <CreateListScreen setListItems={setListItems} />}
                 />
 
                 <Route
                     path="/list/:listId/rank"
-                    render={() => <RankingApp />}
+                    render={() => <RankingScreen />}
                 />
 
                 <Route
                     path="/rank"
-                    render={() => (
-                        <RankingApp initialItems={listItems} />
-                    )}
+                    render={() => <RankingScreen initialItems={listItems} />}
                 />
 
             </Switch>
@@ -568,12 +532,7 @@ function App() {
     );
 }
 
-
-
-    );
-}
-
-ReactDOM.render(<App />, document.getElementById("root"));
+ReactDOM.render(<App/>, document.getElementById("root"));
 
 </script>
 </body>
